# qRestaurant

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: main.qml  qml.qrc  restaurant-hours.csv
headers/: restaurant.hpp
include/: restaurant.hpp
src/: main.cpp  restaurant.cpp
test/: test.cpp
